cluster/homelab/core/traefik/dashboard/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth # Defined secret that we apply before hand manually
#  ipWhiteList
#    sourceRange:
#      - 10.27.0.0/16
#      - 10.27.20.5
